<resources>
    <string name="app_name">DogApp</string>
    <string name="your_favorite_dog_app">Your favourite dog app</string>
    <string name="no_internet_connection">No internet connection...</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_yet_sign_up">Not registered yet? Sign Up!</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered_sign_in">Already registered? Sign in!</string>
    <string name="password_not_matching">Password not matching.</string>
    <string name="empty_fields_are_not_allowed">Empty fields are not allowed</string>
    <string name="error_occurred">Error occurred</string>
    <string name="user_created">User created</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="logout">Logout</string>s
    <string name="about">This is an app made for dog lovers by A.P. Find your favourite dogs and add them to the favourites.</string>
    <string name="randomize">Randomize</string>
    <string name="choose_your_breed">Choose</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="save">save</string>
    <string name="image_saved">Image saved</string>
</resources>