<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/_35sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tfEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tfPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/sign_up"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRedirectToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/already_registered_sign_in"
        android:textColor="@color/black" />

</LinearLayout>
