<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_25dp"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_25dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/_20sp"
        android:paddingBottom="@dimen/_25dp"/>

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about"
        android:textSize="@dimen/_20sp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="@dimen/_150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25dp"
        android:text="@string/logout" />
</LinearLayout>